@@ -3,7 +3,6 @@ package edu.stanford.irt.laneweb.metasearch;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import edu.stanford.irt.laneweb.resource.PagingData;
 import edu.stanford.irt.laneweb.resource.PagingList;
@@ -28,7 +27,7 @@ public class ClinicalSearchResultsFactory {
                 .filter((final Result r) -> r.getStatus() == SearchStatus.SUCCESSFUL)
                 .flatMap((final Result r) -> r.getChildren().stream())
                 .filter((final Result r) -> r.getStatus() == SearchStatus.SUCCESSFUL)
-                .collect(Collectors.toList());
+                .toList();
         List<SearchResult> results = this.conversionStrategy.convertResult(result);
         int total = results.size();
         if (!facets.isEmpty()) {
@@ -38,7 +37,7 @@ public class ClinicalSearchResultsFactory {
                     .flatMap((final Result r) -> r.getChildren().stream())
                     .filter((final Result r) -> r.getStatus() == SearchStatus.SUCCESSFUL)
                     .filter((final Result r) -> facets.contains(r.getId()))
-                    .collect(Collectors.toList());
+                    .toList();
             results = this.conversionStrategy.convertResults(facetResult, query);
         }
         Collections.sort(results);
